--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "deploy": "npx vercel --yes --prod"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@farcaster/miniapp-sdk": "^0.2.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@mui/material": "^7.3.7",
     "@tanstack/react-query": "^5.90.2",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.71.1",
     "viem": "^2.38.0",
-    "wagmi": "^2.18.0"
+    "wagmi": "^2.18.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
