--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.7",
     "@tanstack/react-query": "^5.90.2",
-    "next": "15.5.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "viem": "^2.38.0",
     "wagmi": "^2.18.0",
@@ -36,8 +36,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
