--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
+    "vercel": "^50.4.2",
     "viem": "^2.38.0",
     "wagmi": "^2.18.0",
     "yup": "^1.7.1"
