--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start": "next start",
     "deploy": "npx vercel --yes --prod"
   },
+  "overrides": {
+    "use-sync-external-store": "^1.4.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
